--- a/player.html
+++ b/player.html
@@ -33,7 +33,7 @@ and open the template in the editor.
         <div id="header_player">
             <div id="header_title">My NPR</div>
             <a class="header_nav header_navRight" href="preferences.html"><span class="typcn typcn-cog"></span></a>
-            <input type="range" id="media_bar">
+            <input type="range" id="media_bar" min='0' max='100' value='0'>
         </div>
         <div id="queue">
             <div class="queue_header"><span>Upcoming</span></div>
@@ -44,7 +44,9 @@ and open the template in the editor.
             <div class="queue_item"><span id="news1" class="queue_itemText">Loading...</span></div>
         </div>
         <div id="player">
-            <audio id="player_audio"></audio>
+            <audio id="player_audio">
+                <source src="test.mp3" type="audio/mpeg">
+            </audio>
             <div id="player_controls">
                 <a class="player_btn"><span class="typcn typcn-thumbs-down" onclick="clickedDislike()"></span></a>
                 <a class="player_btn" id="player_btnLike"><span class="typcn typcn-thumbs-up" onclick="clickedLike_TurnOn()"></span></a>
