Moved to latest version

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ and open the template in the editor.
     <body style="background-image:none">
         <div id="iPhone">
             <iframe src="player.html" id="iPhoneCase" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" ></iframe>
+            <img src="iphone.png" style="position: absolute; top: 0; left: 0; pointer-events:none;"/>
         </div>
     </body>
 </html>
