--- a/player.html
+++ b/player.html
@@ -44,9 +44,7 @@ and open the template in the editor.
             <div class="queue_item"><span id="news1" class="queue_itemText">Loading...</span></div>
         </div>
         <div id="player">
-            <audio id="player_audio">
-                <source src="test.mp3" type="audio/mpeg">
-            </audio>
+            <audio id="player_audio"></audio>
             <div id="player_controls">
                 <a class="player_btn"><span class="typcn typcn-thumbs-down" onclick="clickedDislike()"></span></a>
                 <a class="player_btn" id="player_btnLike"><span class="typcn typcn-thumbs-up" onclick="clickedLike_TurnOn()"></span></a>
