--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
+<script type="text/javascript">
+  <!--
+  if (screen.width <= 800) {
+    window.location = "http://JustinDC.github.io/player.html";
+  }
+  //-->
+</script>
+
 <html>
     <head>
         <meta charset="windows-1252">
